@@ -10,6 +10,10 @@
     addition of some files/programs, such as additional
     4DOS files, text utilties in TEXTUTIL directory and
     TITLE command to change window title. (Wengier)
+  - You can now specify a command shell located on a
+    mounted local drive via SHELL= command in [config]
+    section of config file after the drive is properly
+    mounted via INSTALL= command. (WEngier)
   - CHCP command in the Truetype font (TTF) output now
     allows code page 932, 936, 949, and 950 to display
     Chinese, Japanese and Korean characters and file
